apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  namespace: media
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.210
ports:
  - name: http
    port: 8096
    protocol: TCP
